--- a/portfolio.html
+++ b/portfolio.html
@@ -33,47 +33,47 @@
             <article class="clearfix">
 
                 <div class="portolinks">
-                    <a href=""><img src="assets/images/cat1.jpg" alt="placeholder" width="300" height="auto"></a>
+                    <a href=""><img src="assets/images/cat1.jpg" alt="placeholder" width="300px" height="300px"></a>
                         <div class="description">description of project 1</div>
                 </div>
 
                 <div class="portolinks">
-                    <a href=""><img src="assets/images/cat2.jpg" alt="placeholder" width="300" height="auto"></a>
+                    <a href=""><img src="assets/images/cat2.jpg" alt="placeholder" width="300px" height="300px"></a>
                         <div class="description">description of project 2</div>
                 </div>
 
                 <div class="portolinks">
-                    <a href=""><img src="assets/images/cat3.jpg" alt="placeholder" width="300" height="auto"></a>
+                    <a href=""><img src="assets/images/cat3.jpg" alt="placeholder" width="300px" height="300px"></a>
                         <div class="description">description of project 3</div>
                 </div>
 
                 <div class="portolinks">
-                    <a href=""><img src="assets/images/cat4.jpg" alt="placeholder" width="300" height="auto"></a>
+                    <a href=""><img src="assets/images/cat4.jpg" alt="placeholder" width="300px" height="300px"></a>
                         <div class="description">description of project 4</div>
                 </div>
 
                 <div class="portolinks">
-                    <a href=""><img src="assets/images/cat5.jpg" alt="placeholder" width="300" height="auto"></a>
+                    <a href=""><img src="assets/images/cat5.jpg" alt="placeholder" width="300px" height="300px"></a>
                         <div class="description">description of project 5</div>
                 </div>
 
                 <div class="portolinks">
-                    <a href=""><img src="assets/images/cat6.jpg" alt="placeholder" width="300" height="auto"></a>
+                    <a href=""><img src="assets/images/cat6.jpg" alt="placeholder" width="300px" height="300px"></a>
                         <div class="description">description of project 6</div>
                 </div>
 
                 <div class="portolinks">
-                    <a href=""><img src="assets/images/cat7.jpg" alt="placeholder" width="300" height="auto"></a>
+                    <a href=""><img src="assets/images/cat7.jpg" alt="placeholder" width="300px" height="300px"></a>
                         <div class="description">description of project 7</div>
                 </div>
 
                 <div class="portolinks">
-                    <a href=""><img src="assets/images/cat8.jpg" alt="placeholder" width="300" height="auto"></a>
+                    <a href=""><img src="assets/images/cat8.jpg" alt="placeholder" width="300px" height="300px"></a>
                         <div class="description">description of project 8</div>
                 </div>
 
                 <div class="portolinks">
-                    <a href=""><img src="assets/images/cat9.jpg" alt="placeholder" width="300" height="auto"></a>
+                    <a href=""><img src="assets/images/cat9.jpg" alt="placeholder" width="300px" height="300px"></a>
                         <div class="description">description of project 9</div>
                 </div>
 
